@@ -1742,18 +1742,30 @@ IDB_CHECKED             BITMAP                  "..\\graphics\\checked.bmp"
 IDB_UNCHECKED           BITMAP                  "..\\graphics\\unchecked.bmp"
 IDB_EMPTY               BITMAP                  "..\\graphics\\empty.bmp"
 IDB_BLANK               BITMAP                  "..\\graphics\\blank.bmp"
-IDB_DRAGGROUP           BITMAP                  "..\\graphics\\dragbar\\new\\Group.bmp"
-IDB_DRAGTITLE           BITMAP                  "..\\graphics\\dragbar\\new\\Title.bmp"
-IDB_DRAGUSER            BITMAP                  "..\\graphics\\dragbar\\new\\User.bmp"
-IDB_DRAGPASSWORD        BITMAP                  "..\\graphics\\dragbar\\new\\Password.bmp"
-IDB_DRAGNOTES           BITMAP                  "..\\graphics\\dragbar\\new\\Notes.bmp"
-IDB_DRAGURL             BITMAP                  "..\\graphics\\dragbar\\new\\URL.bmp"
-IDB_DRAGGROUPX          BITMAP                  "..\\graphics\\dragbar\\new\\GroupX.bmp"
-IDB_DRAGTITLEX          BITMAP                  "..\\graphics\\dragbar\\new\\TitleX.bmp"
-IDB_DRAGUSERX           BITMAP                  "..\\graphics\\dragbar\\new\\UserX.bmp"
-IDB_DRAGPASSWORDX       BITMAP                  "..\\graphics\\dragbar\\new\\PasswordX.bmp"
-IDB_DRAGNOTESX          BITMAP                  "..\\graphics\\dragbar\\new\\NotesX.bmp"
-IDB_DRAGURLX            BITMAP                  "..\\graphics\\dragbar\\new\\URLX.bmp"
+IDB_DRAGGROUP_NEW       BITMAP                  "..\\graphics\\dragbar\\new\\Group.bmp"
+IDB_DRAGTITLE_NEW       BITMAP                  "..\\graphics\\dragbar\\new\\Title.bmp"
+IDB_DRAGUSER_NEW        BITMAP                  "..\\graphics\\dragbar\\new\\User.bmp"
+IDB_DRAGPASSWORD_NEW    BITMAP                  "..\\graphics\\dragbar\\new\\Password.bmp"
+IDB_DRAGNOTES_NEW       BITMAP                  "..\\graphics\\dragbar\\new\\Notes.bmp"
+IDB_DRAGURL_NEW         BITMAP                  "..\\graphics\\dragbar\\new\\URL.bmp"
+IDB_DRAGGROUPX_NEW      BITMAP                  "..\\graphics\\dragbar\\new\\GroupX.bmp"
+IDB_DRAGTITLEX_NEW      BITMAP                  "..\\graphics\\dragbar\\new\\TitleX.bmp"
+IDB_DRAGUSERX_NEW       BITMAP                  "..\\graphics\\dragbar\\new\\UserX.bmp"
+IDB_DRAGPASSWORDX_NEW   BITMAP                  "..\\graphics\\dragbar\\new\\PasswordX.bmp"
+IDB_DRAGNOTESX_NEW      BITMAP                  "..\\graphics\\dragbar\\new\\NotesX.bmp"
+IDB_DRAGURLX_NEW        BITMAP                  "..\\graphics\\dragbar\\new\\URLX.bmp"
+IDB_DRAGGROUP_CLASSIC   BITMAP                  "..\\graphics\\dragbar\\classic\\Group.bmp"
+IDB_DRAGTITLE_CLASSIC   BITMAP                  "..\\graphics\\dragbar\\classic\\Title.bmp"
+IDB_DRAGUSER_CLASSIC    BITMAP                  "..\\graphics\\dragbar\\classic\\User.bmp"
+IDB_DRAGPASSWORD_CLASSIC BITMAP                 "..\\graphics\\dragbar\\classic\\Password.bmp"
+IDB_DRAGNOTES_CLASSIC   BITMAP                  "..\\graphics\\dragbar\\classic\\Notes.bmp"
+IDB_DRAGURL_CLASSIC     BITMAP                  "..\\graphics\\dragbar\\classic\\URL.bmp"
+IDB_DRAGGROUPX_CLASSIC  BITMAP                  "..\\graphics\\dragbar\\classic\\GroupX.bmp"
+IDB_DRAGTITLEX_CLASSIC  BITMAP                  "..\\graphics\\dragbar\\classic\\TitleX.bmp"
+IDB_DRAGUSERX_CLASSIC   BITMAP                  "..\\graphics\\dragbar\\classic\\UserX.bmp"
+IDB_DRAGPASSWORDX_CLASSIC BITMAP                "..\\graphics\\dragbar\\classic\\PasswordX.bmp"
+IDB_DRAGNOTESX_CLASSIC  BITMAP                  "..\\graphics\\dragbar\\classic\\NotesX.bmp"
+IDB_DRAGURLX_CLASSIC    BITMAP                  "..\\graphics\\dragbar\\classic\\URLX.bmp"
 IDB_VKEYBOARD           BITMAP                  "..\\graphics\\vkbd.bmp"
 
 /////////////////////////////////////////////////////////////////////////////
